Fix thread safety of the translog indexer, remove shared state
Follow up of https://github.com/crate/crate/commit/10dee44.